--- a/fe-wablash/nginx.conf
+++ b/fe-wablash/nginx.conf
@@ -1,16 +1,14 @@
-techteam@monitoring:~/nguliks/revolusi/fe-wablash$ cat nginx.conf 
 server {
   listen 80;
   server_name _;
 
   root /usr/share/nginx/html;
-  index index.html index.htm;
+  index index.html;
 
   location / {
     try_files $uri /index.html;
   }
 
-  # Proxy ke backend
   location /api {
     proxy_pass http://backend:3001;
     proxy_http_version 1.1;
@@ -20,7 +18,6 @@ server {
     proxy_cache_bypass $http_upgrade;
   }
 
-  # Socket.IO proxy
   location /socket.io/ {
     proxy_pass http://backend:3001/socket.io/;
     proxy_http_version 1.1;
